# TCRUtils

./: .gitignore  MANIFEST.in  README.md  bump_version.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py  test_bench_import.py  testimport.py  upload.py
.github/workflows/: python-publish.yml
extras/: requirements-discord.txt
src/nya/: __init__.py  url.py
src/tcrutils/: __init__.py  _version.py  aevents.py  b64.py  class_.py  dev.py  dict.py  int.py  joke.py  lang.py  misspellings.py  print.py  regex.py  result.py  sdb.py  string.py  tree.py  types.py  void.py
src/tcrutils/repl/: __init__.py  repl.py
tcrutils/: F.py  __init__.py  __main__.py  __version__.txt  _version.py  aevents.py  classfuncs.py  cloud_imports.py  codeblock.py  console.py  decorator.py  dir.py  discord_ifys.py  iterable.py  joke.py  lang.py  language.py  misspellings.py  null.py  overload.py  path.py  print.py  result.py  rich.py  run.py  sdb.py  sdb2.py  string.py  timestr.py  timestr2.py  types.py  void.py
tcrutils/discord/: __init__.py  constants.py  embed.py  limits.py  permissions.py  snowflake.py  string.py  tcrd_alias.py  tcrd_commands.py  tcrd_dpy.py  tcrd_embeds.py  tcrd_limits.py  tcrd_permissions.py  tcrd_shorts.py  tcrd_snowflake.py  tcrd_string.py  tcrd_types.py  validate.py
tcrutils/discord/src/: tcrd_alias.py  tcrd_cached_fetch.py  tcrd_commands.py  tcrd_dpy.py  tcrd_embeds.py  tcrd_limits.py  tcrd_markdown.py  tcrd_permissions.py  tcrd_shorts.py  tcrd_snowflake.py  tcrd_string.py  tcrd_types.py
tcrutils/dr/: EXECUTE.md  PLACEHOLDERS.md  __init__.py  core.py  error.py  placeholder_sets.py  util.py
tcrutils/dr/placeholders/: __init__.py  p_discord.py  p_math.py  p_text.py
tcrutils/imgui/: __init__.py  tcri_dependencies.py  tcri_handler.py  tcri_utils.py
tcrutils/imgui/types/: tcri_types_imgui.py
tcrutils/repl/: __init__.py  nodes.py  parser.py  repl.py  tcrr_nodes.py  tcrr_parser.py  tcrr_repl.py
tcrutils/src/: case.py  console.py  decorator.py  dict.py  ensure_deps.py  execute.py  extract_error.py  inject.py  input.py  iterable.py  pyproject.toml  result.py  tcr_F.py  tcr_b64.py  tcr_case.py  tcr_class.py  tcr_classfuncs.py  tcr_cloud_imports.py  tcr_codeblock.py  tcr_color.py  tcr_compare.py  tcr_console.py  tcr_constants.py  tcr_context.py  tcr_decorator.py  tcr_dev.py  tcr_dict.py  tcr_dir.py  tcr_ensure_deps.py  tcr_error.py  tcr_execute.py  tcr_execute_parsed.py  tcr_extract_error.py  tcr_getch.py  tcr_import.py  tcr_inject.py  tcr_input.py  tcr_inspect.py  tcr_int.py  tcr_iterable.py  (+29 more)
tests/: test_b64.py  test_iterable.py  test_joke.py  test_path.py  test_result.py  test_timestr2.py
