[tool.ruff]
extend = "C:/CUSTOM_ASSETS/pyproject.toml"
[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.poetry]
name = "tcrutils"
version = "12.0.173"
description = "Useful stuff for TCR projects!"
authors = ["TheCreatorrrr"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
hikari = "^2.0.0.dev122"
hikari-toolbox = "^0.1.6"
hikari-miru = "^4.0.0"
colored = "^2.2.4"
colorama = "^0.4.6"
attr = "^0.3.2"
hikari-arc = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
