[tool.ruff]
extend = "C:/CUSTOM_ASSETS/pyproject.toml"
indent-width = 4
[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.poetry]
name = "tcrutils"
version = "12.0.269"
description = "Useful stuff for TCR projects!"
authors = ["anamoyee"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/anamoyee/TCRUtils"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Typing :: Typed",
  "Topic :: Utilities",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Microsoft :: MS-DOS",
]

[tool.poetry.extras]
imgui = ["imgui", "glfw", "PyOpenGL", "numpy"]
discord = ["hikari", "hikari-miru", "hikari-arc"]
full = ["imgui", "glfw", "PyOpenGL", "numpy", "hikari", "hikari-miru", "hikari-arc"]


[tool.poetry.dependencies]
# imgui
imgui = { version = ">=2.0.0", optional = true, extras = ["glfw"] }
glfw = { version = ">=2.7.0", optional = true }
PyOpenGL = { version = ">=3.1.5", optional = true }
numpy = { version = ">=1.26.4", optional = true }

# discord
hikari = { version = ">=2.0.0.dev125", optional = true }
hikari-miru = { version = ">=4.1.1,<5.0.0", optional = true }
hikari-arc = { version = ">=1.3.4", optional = true }

# mandatory
python = ">=3.11.0,<3.13"
colored = "^2.2.4"
colorama = "^0.4.6"
attr = "^0.3.2"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["union-attr"]
